--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <div class="page">
   <div class="top-bar">
-    <app-top-bar></app-top-bar>
+    <ap-top-bar></ap-top-bar>
   </div>
   <div class="container">
     <div class="media">
       <div class="content"><router-outlet></router-outlet></div>
       <div class="footer">
-        <app-footer></app-footer>
+        <ap-footer></ap-footer>
       </div>
     </div>
   </div>
