--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,7 +22,7 @@
       </div>
     </div>
     <div class="card-container">
-      <div class="card project-2-card" routerLink="/indeveloping">
+      <div class="card project-2-card" routerLink="/tasks">
         <h1>Test your knowledge</h1>
         <p>In developing</p>
       </div>
