--- a/src/app/letter/letter.component.html
+++ b/src/app/letter/letter.component.html
@@ -29,7 +29,7 @@
       <div>
         <div class="letter-transcription">
           <h2>Transcription: {{ letter?.transcription }}</h2>
-          <audio-player [audio]="letter?.letterSound || ''"></audio-player>
+          <ap-audio-player [audio]="letter?.letterSound || ''"></ap-audio-player>
         </div>
       </div>
     </div>
