--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -8,8 +8,8 @@ $iconSize: 24px;
 }
 
 .form {
-  width: 740px;
   display: flex;
+  width: 740px;
   flex-direction: column;
   align-items: center;
   padding: 37px 30px;
@@ -19,8 +19,9 @@ $iconSize: 24px;
   width: 100%;
   text-align: center;
   padding-bottom: 15px;
-  border-bottom: 1px solid rgba(25, 25, 25, 0.1);
+  border-bottom: 1px solid #e8e8e8;
   margin-bottom: 23px;
+
   h1 {
     margin: 0;
   }
@@ -38,8 +39,8 @@ $iconSize: 24px;
 }
 
 .form-buttons {
-  width: 100%;
   display: flex;
+  width: 100%;
   justify-content: space-around;
 }
 
