--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,12 +7,13 @@ $footerHeight: 64px;
 .container {
   height: calc(100vh - $footerHeight);
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .media {
+  display: flex;
   margin-right: calc(-1 * (100vw - 100%));
   height: 100%;
-  display: flex;
   flex-direction: column;
 }
 
