--- a/src/app/components/audio-player/audio-player.component.scss
+++ b/src/app/components/audio-player/audio-player.component.scss
@@ -1,7 +1,7 @@
 .audio-player {
   display: flex;
   align-items: center;
-  background-color: rgb(229, 226, 226);
+  background-color: #e5e2e2;
   border-radius: 10px;
   padding: 5px;
   width: 300px;
