--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,7 +1,7 @@
 .footer {
   justify-content: center;
   align-items: center;
-  border-top: 1px solid rgba(25, 25, 25, 0.1);
-  background-color: white;
+  border-top: 1px solid #e8e8e8;
+  background-color: #ffffff;
   padding: 20px 0px;
 }
