--- a/src/app/components/top-bar/top-bar.component.scss
+++ b/src/app/components/top-bar/top-bar.component.scss
@@ -6,9 +6,9 @@
 .top-bar {
   position: relative;
   z-index: 1001;
-  background-color: white;
+  background-color: #ffffff;
   justify-content: space-between;
-  border-bottom: 1px solid rgba(25, 25, 25, 0.1);
+  border-bottom: 1px solid #e8e8e8;
 }
 
 .buttons-container {
