--- a/src/app/letter/letter.component.scss
+++ b/src/app/letter/letter.component.scss
@@ -1,14 +1,14 @@
 .container {
-  height: 100%;
   display: flex;
+  height: 100%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
 .button-container {
-  width: 50%;
   display: flex;
+  width: 50%;
   justify-content: space-around;
   padding: 20px;
 }
@@ -16,16 +16,16 @@
 .letter {
   display: flex;
   padding: 15px;
-  border: 1px solid rgba(25, 25, 25, 0.1);
+  border: 1px solid #e8e8e8;
   border-radius: 10px;
-  box-shadow: 0 5px 30px 0 rgba(0, 0, 0, 0.4);
+  box-shadow: 0 5px 30px 0 #999999;
   margin-bottom: 30px;
 
-  @media (max-width: 1439px) {
+  @media ( max-width: 1439px ) {
     flex-direction: column;
   }
 
-  @media (max-width: 374px) {
+  @media ( max-width: 374px ) {
     padding: 0px;
   }
 }
@@ -34,13 +34,13 @@
   height: 450px;
   margin-right: 50px;
 
-  @media (max-width: 767px) {
+  @media ( max-width: 767px ) {
     text-align: center;
     height: 250px;
     margin-right: 0px;
   }
 
-  @media (max-width: 424px) {
+  @media ( max-width: 424px ) {
     height: 200px;
   }
 }
@@ -50,7 +50,7 @@
 }
 
 .letter-right {
-  @media (max-width: 1439px) {
+  @media ( max-width: 1439px ) {
     text-align: center;
   }
 }
@@ -61,7 +61,7 @@
 }
 
 .letter-transcription {
-  @media (max-width: 1439px) {
+  @media ( max-width: 1439px ) {
     display: flex;
     flex-direction: column;
     align-items: center;
