--- a/src/app/registration/registration-form/dialogs/create-new-user/dialog-create-new-user.html
+++ b/src/app/registration/registration-form/dialogs/create-new-user/dialog-create-new-user.html
@@ -1,18 +1,20 @@
-<div mat-dialog-content class="student-form">
-  <h2>New student information</h2>
+<div mat-dialog-content class="user-form">
+  <h2>New user information</h2>
   <mat-stepper #stepper orientation="vertical">
-    <form [formGroup]="newStudentForm" novalidate>
+    <form [formGroup]="newUserForm" novalidate>
       <mat-step
-        [stepControl]="newStudentForm.controls['name']"
-        errorMessage="Enter your name."
+        [stepControl]="newUserForm.controls['name']"
+        errorMessage="Enter user's name."
       >
         <ng-template matStepLabel>Fill out student's name</ng-template>
         <div class="step-content-margin-top">
           <mat-form-field appearance="fill">
             <mat-label>Name</mat-label>
             <input matInput placeholder="First name" formControlName="name" />
-            <mat-error *ngIf="checkControlErrors('name')">
-              Enter student's name
+            <mat-error
+              *ngIf="newUserForm.controls['name'].invalid && newUserForm.controls['name'].touched"
+            >
+              Enter user's name
             </mat-error>
           </mat-form-field>
           <div>
@@ -21,10 +23,10 @@
         </div>
       </mat-step>
       <mat-step
-        [stepControl]="newStudentForm.controls['lastName']"
-        errorMessage="Enter student's last name."
+        [stepControl]="newUserForm.controls['lastName']"
+        errorMessage="Enter user's last name."
       >
-        <ng-template matStepLabel>Fill out student's last name</ng-template>
+        <ng-template matStepLabel>Fill out user's last name</ng-template>
         <div class="step-content-margin-top">
           <mat-form-field appearance="fill">
             <mat-label>Last name</mat-label>
@@ -33,8 +35,10 @@
               placeholder="Last name"
               formControlName="lastName"
             />
-            <mat-error *ngIf="checkControlErrors('lastName')">
-              Enter student's last name
+            <mat-error
+              *ngIf="newUserForm.controls['lastName'].invalid && newUserForm.controls['lastName'].touched"
+            >
+              Enter user's last name
             </mat-error>
           </mat-form-field>
           <div>
@@ -44,10 +48,10 @@
         </div>
       </mat-step>
       <mat-step
-        [stepControl]="newStudentForm.controls['email']"
+        [stepControl]="newUserForm.controls['email']"
         errorMessage="Incorrect email."
       >
-        <ng-template matStepLabel>Fill out student's email</ng-template>
+        <ng-template matStepLabel>Fill out user's email</ng-template>
         <div class="step-content-margin-top">
           <mat-form-field appearance="fill">
             <mat-label>Email</mat-label>
@@ -56,7 +60,9 @@
               placeholder="Ex. email@email.com"
               formControlName="email"
             />
-            <mat-error *ngIf="checkControlErrors('email')">
+            <mat-error
+              *ngIf="newUserForm.controls['email'].invalid && newUserForm.controls['email'].touched"
+            >
               Incorrect email or this email's already in use
             </mat-error>
           </mat-form-field>
@@ -67,10 +73,10 @@
         </div>
       </mat-step>
       <mat-step
-        [stepControl]="newStudentForm.controls['phoneNumber']"
+        [stepControl]="newUserForm.controls['phoneNumber']"
         errorMessage="Incorrect phone number."
       >
-        <ng-template matStepLabel>Fill out student's phone number</ng-template>
+        <ng-template matStepLabel>Fill out user's phone number</ng-template>
         <div class="step-content-margin-top">
           <mat-form-field appearance="fill">
             <mat-label>Phone number</mat-label>
@@ -79,7 +85,9 @@
               placeholder="Phone number"
               formControlName="phoneNumber"
             />
-            <mat-error *ngIf="checkControlErrors('phoneNumber')">
+            <mat-error
+              *ngIf="newUserForm.controls['phoneNumber'].invalid && newUserForm.controls['phoneNumber'].touched"
+            >
               Incorrect phone number
             </mat-error>
           </mat-form-field>
@@ -93,19 +101,19 @@
         <ng-template matStepLabel>Done</ng-template>
         <div class="step-content-margin-top">
           <h3>
-            {{ newStudentForm.invalid ? "Please fill in all required fields" :
-            "You are now done." }}
+            {{ newUserForm.invalid ? "Please fill in all required fields" : "You
+            are now done." }}
           </h3>
           <div mat-dialog-actions>
             <button mat-button matStepperPrevious type="button">Back</button>
             <button mat-button (click)="cancel()">Cancel</button>
             <button
               mat-button
-              [disabled]="newStudentForm.invalid"
-              [mat-dialog-close]="newStudentForm"
+              [disabled]="newUserForm.invalid"
+              [mat-dialog-close]="newUserForm.value"
               cdkFocusInitial
             >
-              Add student
+              Add user
             </button>
           </div>
         </div>
